Support for JDK17 and above. Added Chill and Upickle serializers. Hupped Sbt, Scala and dependencies versions. Refactor test structure and rename classes for clarity.
Removed redundant test spec files and consolidated EC and RSA tests. Updated ECIES to EC and adjusted imports and package structure. Added Upickle serializer tests.